# durable-podcast-insights

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  worker.py
.claude/: CLAUDE.md
.claude/skills/: aws-bedrock.md  demo-ideas.md  fastapi-patterns.md  gemini-api.md  project-scaffolding.md  temporal-ai-integration.md  temporal-python.md  youtube-data-api.md
activities/: analyzer.py  scraper.py
app/: config.py  main.py  routes.py
models/: schemas.py
static/: index.html
workflows/: insights.py
